--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,9 +15,9 @@ rules:
   indent:
     - warn
     - 2
-  linebreak-style:
-    - error
-    - windows
+#  linebreak-style:
+#    - error
+#    - windows
   quotes:
     - error
     - single
