--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-hot-loader": "^1.3.0",
     "react-router": "^2.5.1",
     "material-ui": "^0.15.1",
     "react-tap-event-plugin": "^1.0.0"
