--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-image-gallery",
+  "name": "react-boiler-plate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
