--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "material-ui": "^0.15.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^2.5.1",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-router": "^2.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
